@@ -10,6 +10,7 @@ codebird-php - changelog
   by replacing preg_match with preg_match_all
 + #134 Add support for compressed remote images
 + #129 Allow to change remote media download timeout
++ #144 Support Collections API
 
 2.7.2 (2015-09-23)
 - #135 Invalid HTTP request headers in non-cURL mode
